--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"description": "cli for creating boilerplate files",
 	"main": "index.js",
 	"author": "Braulio Barahona",
-	"license": "ISC",
+	"license": "MIT",
 	"dependencies": {
 		"chalk": "^2.4.2",
 		"clear": "^0.1.0",
