--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
 		"figlet": "^1.2.1",
 		"inquirer": "^6.3.1",
 		"user-settings": "^0.2.0"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/bab2683/bab-cli/"
 	}
 }
